--- a/CSS/style.css
+++ b/CSS/style.css
@@ -134,6 +134,76 @@ nav ul li a{
 }
 
 .intro .container {
-    padding-top: 100px;
+    padding-top: 90px;
 }
 
+.container img {
+    height: auto;
+    width: 100%;
+    padding-bottom: 45px;
+}
+
+.subscription .container {
+    background-color: #333;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    text-align: center;
+    padding-top: 90px;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.subscription .container .copy {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.subscription .container img {
+    padding: 0;
+}
+
+
+@media (min-width: 768px) {
+    .subscription .container {
+        display: flex;
+        flex-direction: row;
+        padding: 0;
+        align-items: center;
+        justify-content: center;
+        background-color: #333;
+        width: 100%;
+        color: white;
+        text-align: center;
+    }
+    .container img {
+        height: auto;
+        width: 50%;
+        padding-bottom: 0;
+        padding-right: 0;
+    }
+    h2 {
+        padding-bottom: 0.5px;
+    }
+}
+
+
+.gift-cards .container {
+    padding-top: 90px;
+}
+
+.gift-cards .container h2 {
+    text-align: center;
+    padding-bottom: 0.5rem;
+}
+
+.gift-cards .container button {
+    background-color: #27CEEF;
+    color: white;
+    font-weight: bold;
+}
+
+.gift-cards .container .contest-image {
+    padding-top: 25px;
+    text-align: center;
+}
